[tool.poetry]
name = "comfyui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
torchsde = "^0.2.5"
einops = "^0.6.1"
transformers = "^4.31.0"
safetensors = "^0.3.2"
aiohttp = "^3.8.5"
accelerate = "^0.21.0"
pyyaml = "^6.0.1"
pillow = "^10.0.0"
scipy = "^1.11.1"
tqdm = "^4.66.1"
psutil = "^5.9.5"
torch = "^2.0.1+cu118"
torchvision = "^0.15.2+cu118"
torchaudio = "^2.0.2+cu118"
xformers = "^0.0.20"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
